Update 'hvozcpboe-nodejs' component image to: quay.io/rhtap_qe/rhtap-qe:c87b2232a9725d28954b03e15d28d03f49599942@sha256:df34471d6a2553fbfbf53a17a875eb89416170145a35526f6932b5dcc3fbca2a

--- a/components/hvozcpboe-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/hvozcpboe-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: hvozcpboe-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe:c87b2232a9725d28954b03e15d28d03f49599942@sha256:df34471d6a2553fbfbf53a17a875eb89416170145a35526f6932b5dcc3fbca2a
+          name: container-image
